--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -28,11 +28,11 @@
 	@media(max-width: 1000px) {
 		padding: 30px 40px;
 	}
-	@media(max-width: 800px) {
+	@media(max-width: @tablet-breakpoint) {
 		padding: 20px 40px;
+		margin-top: 0;
 	}
 	@media(max-width: @mobile-breakpoint) {
-		margin-top: 10px;
 		display: block;
 		padding: 40px;
 	}
