--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -12,6 +12,9 @@
 		grid-gap: 20px;
 	}
 	@media(max-width: @tablet-breakpoint) {
+		width: 100%;
+	}
+	@media(max-width: @tablet-breakpoint) {
 		grid-template-columns: 1fr;
 	}
 }
