--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -4,9 +4,9 @@
 	header
 ====================================================*/
 nav {
-	margin-bottom: 30px !important;
+	margin-bottom: 30px;
 	box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.2) !important;
-	@media(max-width: @mobile-breakpoint) {
+	@media(max-width: @tablet-breakpoint) {
 		margin-bottom: 0 !important;
 	}
 
