--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -93,12 +93,12 @@
 		justify-content: center;
 		max-width: 70%;
 		@media(max-width: @mobile-breakpoint) {
-			max-width: 60%;
+			max-width: 200px;
     	justify-content: space-between;
 		}
 
 		.page {
-			margin: 0 15px;
+			margin: 0 10px;
 			@media(max-width: @mobile-breakpoint) {
 				margin: 0;
 			}
