--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -118,6 +118,13 @@
 		.fb {
 			height: 220px;
 		}
+
+		&.twitter {
+			overflow: hidden;
+			iframe {
+				 max-height: 1000px;
+			}
+		}
 	}
 
 	#newsletter-sidebar {
