--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,5 +1,5 @@
 #seriesposts {
-  margin: 0 0 30px;
+  margin: 0 0 20px;
     padding: 20px 0 10px;
     display: none;
     position: relative;
@@ -20,7 +20,7 @@
     color: #597d87 !important;
     font-family: @body-font-bold;
     letter-spacing: 1px;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
     padding: 0;
     width: -webkit-fill-available;
     width: -moz-fill-available;
@@ -54,7 +54,7 @@
       margin: 18px 0;
       opacity: 0.7;
       counter-increment: li -1;
-      color: #597d87;
+      color: #2f4951;
       font-family: @body-font;
       font-size: 0.85em;
       padding-left: 0;
@@ -83,7 +83,7 @@
 
       &::before {
         content: "Part " counter(li, upper-roman) "." !important;
-        color: #597d87;
+        color: #2f4951;
         font-family: @body-font !important;
         margin-right: 8px;
         font-size: 13px;
