--- a/src/less/etc/error.less
+++ b/src/less/etc/error.less
@@ -1,4 +1,5 @@
 @import '../global/variables.less';
+@import '../global/fonts.less';
 
 body,
 html {
@@ -53,6 +54,7 @@ header {
     height: 120px;
     text-shadow: -3px 3px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
     font-size: 160px;
+    font-family: 'TTNormsPro-Medium', sans-serif;
     @media(max-width: @mobile-breakpoint) {
       font-size: 120px;
     }
@@ -72,6 +74,7 @@ header {
     padding-bottom: 32px;
     color: white !important;
     text-shadow: -1px 1px 0 #404767;
+    font-family: 'AvenirNextLTPro-Medium', sans-serif;
   }
 
   .error-button {
@@ -84,14 +87,14 @@ header {
     color: white !important;
     background: rgba(255, 255, 255, 0.25);
     transition: all 0.2s ease-out;
+    font-family: 'AvenirNextLTPro-Medium', sans-serif;
     @media(max-width: @mobile-breakpoint) {
-      background-color: white;
       color: #444444;
-      width: 100%;
+      width: -webkit-fill-available;
     }
 
     &:hover {
-      background: rgba(255, 255, 255, .7);
+      background: rgba(255, 255, 255, .4);
       border: 1px solid rgba(255, 255, 255, .9);
       cursor: pointer;
       color: @theme-color;
