page layout refactor

--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -3,7 +3,7 @@
 <!-- start site's main content area -->
 <script src="{{asset "js/apply.js"}}"></script>
 <section class="content-wrap page-apply">
-  <div class="projects-container">
+  <div class="page-container">
     {{#post}}
       <!-- start main area -->
       <main class="{{page-class}} main-content page">
