--- a/custom-resources.hbs
+++ b/custom-resources.hbs
@@ -4,10 +4,10 @@
 
 
 <section class="content-wrap archive page-resources">
-  <div class="projects-container">
+  <div class="page-container">
     <!-- start post -->
     {{#post}}
-      <div class="main-content" style="width:100%; padding: 10px 0">
+      <main class="main-content" style="width:100%; padding: 10px 0">
         {{#if feature_image}}
           <div class="post-image" style="background-image: url({{feature_image}});">
           </div>
@@ -28,7 +28,7 @@
             </tbody>
           </table>
         </div>
-      </div>
+      </main>
   </div>
   {{/post}}
   </div>
