--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -4,10 +4,10 @@
 {{#contentFor "series_page"}}gh-head-transparent{{/contentFor}}
 <!-- start site's main content area -->
 <section class="content-wrap archive">
-	<div class="page-container">
+	<div class="page-container sidebar-layout">
 			<!-- start main post area -->
 			{{> sidebar}}
-			<div class=" main-content">
+			<div class="main-content">
 				<!-- start post -->
 				{{#post}}
 					<section class="{{post_class}} post-preview">
