--- a/custom-transactional.hbs
+++ b/custom-transactional.hbs
@@ -16,7 +16,7 @@
 	<!-- start site's main content area -->
 	{{#post}}
 		<section>
-			<div class="container">
+			<div class="page-container">
 				<!-- start post -->
 				<h1 class="post-title">{{{title}}}</h1>
 				{{{body}}}
