--- a/series.hbs
+++ b/series.hbs
@@ -2,12 +2,12 @@
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
 <section class="content-wrap series-template {{body_class}}">
-	<div class="page-container">
+	<div class="page-container sidebar-layout">
 		<!-- end main post area -->
 		{{! insert sidebar partial}}
 		{{> sidebar}}
 		<!-- start main post area -->
-		<div class=" main-content">
+		<div class="main-content">
 			<div class="postlist">
 				<!-- start sorting widget -->
 				<div class="sort-container">
