--- a/src/less/etc/applyform.less
+++ b/src/less/etc/applyform.less
@@ -2,7 +2,7 @@
 
 .page-become-a-contributor {
   .main-content {
-    padding: 50px 80px;
+    padding: 50px;
     margin: auto;
     @media(max-width: @mobile-breakpoint) {
       padding: 40px 30px;
