--- a/src/less/etc/post-archive.less
+++ b/src/less/etc/post-archive.less
@@ -1,7 +1,4 @@
-  .main-content {
-    width: 100% !important;
-  }
-
+.post-archive {
   .postlist {
     width: 100%;
     display: grid;
@@ -12,7 +9,7 @@
       width: auto;
       padding: 15px;
       margin-bottom: 0;
-      
+
       .post-head .post-title {
         font-size: 1.5em;
       }
@@ -23,3 +20,8 @@
       }
     }
   }
+
+  .pagination {
+    margin: 30px auto 15px;
+  }
+}
