--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -749,6 +749,8 @@ nav {
 			height: 48px;
 			background: none;
 			color: #454a57 !important;
+			outline-color: transparent;
+  		outline-style: none;
 		}
 
 		.dropdown-content {
