--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -99,7 +99,7 @@
 		article {
 			width: 100% !important;
 			padding: 0 !important;
-			box-shadow: 0 0 5px rgba(80, 82, 204, 0.1) !important;
+			box-shadow: 0 5px 3px rgba(80, 82, 204, 0.05) !important;
 			background: white;
 			margin-bottom: 0;
 			position: relative;
