--- a/default.hbs
+++ b/default.hbs
@@ -14,10 +14,11 @@
 	{{! Scripts }}
 	{{> lazyload}}
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
-	{{#is "post"}}
-		<meta property="og:image" content="{{img_url feature_image}}">
-		{{else}}
-			<meta property="og:image" content="{{img_url @site.cover_image}}" />
+	{{! Scripts }}
+	{{^is "post"}}
+		<meta property="og:image" content="{{img_url @site.cover_image}}" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:url" content="{{img_url @site.cover_image}}" />
 	{{/is}}
 	{{! Ghost outputs important style and meta data with this tag }}
 	{{ghost_head}}
