--- a/page.hbs
+++ b/page.hbs
@@ -3,7 +3,7 @@
 
 <!-- start site's main content area -->
 <section class="content-wrap">
-	<div class="page-container">
+	<div class="page-container sidebar-layout">
 		{{> sidebar}}
 		<!-- start main post area -->
 		<div class="main-content">
