--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -1,37 +1,25 @@
 .page-container {
-	max-width: 1200px;
+	max-width: 1100px;
 	margin: auto;
-	display: grid;
-	grid-gap: 30px;
-	grid-template-columns: 1fr 3fr;
 	@media(max-width: 1200px) {
 		width: 95%;
 		max-width: none;
 	}
-	@media(max-width: 950px) {
-		grid-gap: 20px;
-	}
-	@media(max-width: @tablet-breakpoint) {
-		width: 100%;
-	}
-	@media(max-width: @tablet-breakpoint) {
-		grid-template-columns: 1fr;
-	}
-}
 
-.about-container {
-@media(max-width: @tablet-breakpoint) {
-	width: 100% !important;
-	}
-}
 
-.projects-container {
-	max-width: 1200px;
-	margin: auto;
-	@media(max-width: @tablet-breakpoint) {
-		grid-template-columns: 1fr;
-		width: 100%;
-		max-width: none;
+	&.sidebar-layout {
+		display: grid;
+		grid-gap: 30px;
+		grid-template-columns: 1fr 3fr;
+		@media(max-width: 950px) {
+			grid-gap: 20px;
+		}
+		@media(max-width: @tablet-breakpoint) {
+			width: 100%;
+		}
+		@media(max-width: @tablet-breakpoint) {
+			grid-template-columns: 1fr;
+		}
 	}
 }
 
