continued style refactoring

--- a/partials/widgets/widget-newsletter.hbs
+++ b/partials/widgets/widget-newsletter.hbs
@@ -4,7 +4,7 @@
     <section class="gh-subscribe">
       <h4 class="sidebar-title">{{t "Newsletter"}}</h4>
       <div class="newsletter input-group">
-        <p class="news-description">Are you into data to the point where it's almost embarrasing? Toss us your email - we'll promise to only give you the good stuff.</p>
+        <p class="news-description">Are you into data to the point where it's almost embarrasing? Toss us your email and we'll promise to only give you the good stuff.</p>
         {{subscribe_form
           placeholder="Your email address"
           input_class="subscribe-input-class"
