--- a/src/less/pages/about-page.less
+++ b/src/less/pages/about-page.less
@@ -14,9 +14,9 @@
     flex-wrap: wrap;
     align-content: flex-start;
     flex-flow: row wrap;
-    margin: 0 40px 20px;
+    margin: 0 40px 40px;
     @media(max-width: 1040px) {
-      margin: 0 10px 30px;
+      margin: 0 15px 10px;
     }
     @media(max-width: 900px) {
       margin: 0 30px 30px;
@@ -29,21 +29,21 @@
   }
 
   figure {
-    margin: 0;
-    @media(max-width: @mobile-breakpoint) {
-      margin-bottom: 10px;
+    margin: 0 40px 30px;
+    @media(max-width: 1100px) {
+      margin: -8px 20px 0;
     }
   }
 
   iframe {
     /*box-shadow: 0 0 22px #8d9fb9;*/
-    margin-bottom: 30px;
+    margin: 0;
     width: 100%;
     left: 0;
   }
 
   .page-title {
-    margin: 40px 40px 30px !important;
+    margin: 40px 40px 0 !important;
     font-weight: 500;
     @media(max-width: 1100px) {
       font-size: 3em;
@@ -53,7 +53,7 @@
 
   .about-content {
     & > p {
-      margin: 0 44px 20px !important;
+      margin: 0 40px 20px !important;
       font-weight: 300;
       @media(max-width: @mobile-breakpoint) {
         margin: 0 30px 20px !important;
@@ -72,20 +72,15 @@
 
   .welcomevideo,
   iframe {
-    margin: 0 0 40px !important;
     height: 400px;
     display: block;
-    @media(max-width: 1100px) {
-      width: 100%;
-      margin: -12px auto 20px 0 !important;
-    }
     @media(max-width: @tablet-breakpoint) {
       height: 451px;
     }
     @media(max-width: @mobile-breakpoint) {
       width: 100%;
       height: 360px;
-      margin: -12px 0 10px 0 !important;
+      margin: -12px 0 0 !important;
       top: -7px;
     }
     @media(max-width: 470px) {
