--- a/src/less/pages/page.less
+++ b/src/less/pages/page.less
@@ -9,5 +9,9 @@
   .main-content {
     box-shadow: 0 0 5px rgba(65,67,144,.15);
     background: white;
+
+    a {
+      font-family: 'AvenirNextLTPro-Medium', sans-serif;
+    }
   }
 }
