--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -4,7 +4,7 @@
 	footer
 ====================================================*/
 .main-footer {
-	background: #0d1a2f !important;
+	background: #162544 !important;
 	background-size: cover;
 	padding: 35px 8%;
 	color: #fff;
@@ -235,7 +235,7 @@
 
 .copyright {
 	width: 100%;
-	background: #0d1527;
+	background: #12203c;
 	text-align: center;
 	color: white;
 	font-size: 0.85em;
