--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -4,8 +4,8 @@
   .series-cover {
     background-size: cover;
     background-position-y: center;
-    height: 300px;
-    background-color: #192e4c;
+    height: 250px;
+    background-color: #3c5983;
     background-blend-mode: multiply;
     box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
     @media(max-width: @mobile-breakpoint) {
@@ -88,7 +88,7 @@
 
       .tags {
         @media(max-width: @tablet-breakpoint) {
-          display: none;
+          display: none !important;
         }
       }
 
