--- a/partials/footer/footer-tags.hbs
+++ b/partials/footer/footer-tags.hbs
@@ -2,10 +2,11 @@
 <div class="widget tags">
 	<h4 class="footer-title">Tags</h4>
 	<ul>
-    {{#get "tags" filter="slug:-[roundup,excel,machine-learning,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks]" limit="6" include="count.posts" order="count.posts DESC" }}
+    {{#get "tags" filter="slug:-[roundup,excel,machine-learning,graph-databases,science-news,cybersecurity,blockchain,aws-api,kanban,codesnippetcorner,statistics,tableau-hacks,software-development,architecture,restapis]" limit="6" include="count.posts" order="count.posts DESC" }}
 			{{#foreach tags}}
 					<li><a href="{{url}}">{{name}}</a></li>
 			{{/foreach}}
+			<li><a href="https://hackersandslackers.com/pandas/">Pandas</a></li>
 		{{/get}}
 		</ul>
 </div>
