--- a/post.hbs
+++ b/post.hbs
@@ -68,7 +68,7 @@
 			</div>
 		</article>
 		<!-- end main post area -->
-		{{> posts/postfooter}}
+		{{> posts/afterpost}}
 		{{#contentFor "scripts"}}
 			<script async src="{{asset "js/posts.js"}}"></script>
 			<script src="https://hackersandslackers.com/assets/js/includes/highlight.min.js"></script>
