--- a/partials/author/author-sidebar.hbs
+++ b/partials/author/author-sidebar.hbs
@@ -1,5 +1,5 @@
 <!-- Start Author Sidebar -->
-<div class="sidebar" class="{{author.slug}}">
+<div class="sidebar" class="{{primary_author.slug}}">
   {{> author/widget-authorwebsite}}
 	{{> author/widget-authorgithub}}
 	{{!--{{> author/widget-medium}}--}}
