minor style refactor

--- a/src/less/pages.less
+++ b/src/less/pages.less
@@ -1,14 +1,14 @@
 /* Global Styles */
-@import 'global/variables.less';
-@import 'global/mixin.less';
+@import './global/variables.less';
+@import './global/mixin.less';
 
 /* Page Styles */
-@import 'pages/page.less';
-@import 'pages/about-page.less';
-@import 'pages/tag-page.less';
-@import 'pages/resources.less';
-@import 'pages/customtemplates.less';
-@import 'pages/cover.less';
+@import './pages/page.less';
+@import './pages/about-page.less';
+@import './pages/tag-page.less';
+@import './pages/resources.less';
+@import './pages/customtemplates.less';
+@import './pages/cover.less';
 
-/* Table Styles for Resources Page */
-@import 'posts/table.less';
+/* Table Styles */
+@import './posts/table.less';
