--- a/src/less/projects.less
+++ b/src/less/projects.less
@@ -1,4 +1,5 @@
-@import 'projects/repos.less';
-@import 'projects/kanban.less';
-@import 'projects/picker.less';
-@import 'projects/projects-page.less';
+/* Projects Styles */
+@import './projects/repos.less';
+@import './projects/kanban.less';
+@import './projects/picker.less';
+@import './projects/projects-page.less';
