--- a/src/less/series.less
+++ b/src/less/series.less
@@ -1,7 +1,7 @@
 /* Global Styles */
-@import 'global/variables.less';
-@import 'global/mixin.less';
+@import './global/variables.less';
+@import './global/mixin.less';
 
 /* Series Styles */
-@import 'etc/series.less';
-@import 'pages/page.less';
+@import './etc/series.less';
+@import './pages/page.less';
