--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -1,13 +1,13 @@
 /* Global Vars */
-@import 'global/variables.less';
-@import 'global/mixin.less';
+@import './global/variables.less';
+@import './global/mixin.less';
 
 /* Global Styles */
-@import 'global.less';
+@import './global.less';
 
 /* Page Styles */
-@import 'pages/page.less';
-@import 'etc/transaction.less';
+@import './pages/page.less';
+@import './etc/transaction.less';
 
 
 .page-template {
