--- a/src/less/author.less
+++ b/src/less/author.less
@@ -1,13 +1,15 @@
 /* Global Styles */
-@import 'global/variables.less';
-@import 'global/mixin.less';
+@import './global/variables.less';
+@import './global/mixin.less';
 
 /* Page Styles */
-@import 'pages/page.less';
-@import 'author/author.less';
-@import 'author/githubcard.less';
-@import 'author/medium.less';
-@import 'author/meetup.less';
-@import 'author/website.less';
-@import 'author/rss.less';
-@import 'pages/cover.less';
+@import './pages/page.less';
+@import './pages/cover.less';
+
+/* Author Styles */
+@import './author/author.less';
+@import './author/githubcard.less';
+@import './author/medium.less';
+@import './author/meetup.less';
+@import './author/website.less';
+@import './author/rss.less';
