--- a/src/less/pages.less
+++ b/src/less/pages.less
@@ -5,7 +5,7 @@
 /* Page Styles */
 @import './pages/page.less';
 @import './pages/about-page.less';
-@import './pages/tag-page.less';
+@import './pages/tag.less';
 @import './pages/resources.less';
 @import './pages/customtemplates.less';
 @import './pages/cover.less';
