separated tag page into standalone entry point

--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -23,4 +23,7 @@
 {{^is "post,home"}}
   <script async src="{{asset "js/pages.js"}}"></script>
 {{/is}}
+{{#is "tag"}}
+  <script async src="{{asset "js/tag.js"}}"></script>
+{{/is}}
 <!-- End Scripts -->
