added tags for apache & spark

--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -301,4 +301,22 @@
       fill: #bc6391 !important;
     }
   }
+
+  .apache {
+    color:#d5212a;
+    background: #f7d8d9;
+
+    * {
+      color:#d5212a !important;
+    }
+  }
+
+  .spark {
+    background: #e9ccb6;
+    color: #e77115;
+
+    * {
+      color: #e77115 !important;
+    }
+  }
 }
