--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -345,6 +345,11 @@ section .widget.newsletter {
 		width: 93%;
 		max-width: unset;
 	}
+	@media(max-width: @mobile-breakpoint) {
+		margin: 20px;
+		width: auto;
+		max-width: unset;
+	}
 
 	.related-posts {
 		display: grid;
