--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -4,15 +4,15 @@
   border-radius: 2px !important;
   background: #fff !important;
   padding: 0;
-  margin: 10px 0;
+  margin: 20px 0;
   border-left: 2px solid #dcdcdc!important;
   border-bottom: 2px solid #dcdcdc !important;
   position: relative;
   border: 1px solid #ececec;
   color: #5f5f5f;
   @media(max-width: @mobile-breakpoint) {
-    width: 100%!important;
-    margin: 10px auto;
+    width: auto !important;
+    margin: 20px;
   }
 
   .author {
