fixed bug introduced by adding additional entry point

--- a/custom-tag-archive.hbs
+++ b/custom-tag-archive.hbs
@@ -41,5 +41,8 @@
 	</div>
 </section>
 {{/post}}
+{{#contentFor "scripts"}}
+	<script async src="{{asset "js/tag.js"}}"></script>
+{{/contentFor}}
 <!-- end post -->
 <!-- end site's main content area -->
