--- a/post.hbs
+++ b/post.hbs
@@ -1,9 +1,8 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
-<!-- start site's main content area -->
+<!-- Start Post -->
 <div class="container">
 	{{#post}}
-		<!-- start main post area -->
 		<article class="{{post_class}}">
 			<div class="post-wrapper">
 				<header>
@@ -82,6 +81,4 @@
 		{{/contentFor}}
 	{{/post}}
 </div>
-
-<!-- end post -->
-<!-- end site's main content area -->
+<!-- End post -->
