--- a/src/less/etc/error.less
+++ b/src/less/etc/error.less
@@ -55,17 +55,19 @@ header {
     text-shadow: -3px 3px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
     font-size: 160px;
     font-family: 'TTNormsPro-Medium', sans-serif;
+    font-weight: 900;
     @media(max-width: @mobile-breakpoint) {
       font-size: 120px;
     }
   }
 
   h2 {
-    margin-top: 0;
+    margin: 0 0 50px 0;
     max-width: 700px;
     font-size: 30px;
     width: 90%;
     color: white !important;
+    ont-family: 'AvenirNextLTPro-Medium', sans-serif !important;
     text-shadow: -2px 2px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
   }
 
