--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -83,8 +83,8 @@
 
       &::before {
         content: "Part " counter(li, upper-roman) "." !important;
-        color: #2f4951;
-        font-family: @body-font !important;
+        color: #64868f;
+        font-family: 'AvenirNextLTPro-Medium', sans-serif !important;
         margin-right: 8px;
         font-size: 13px;
         @media(max-width: @mobile-breakpoint) {
