--- a/partials/author/cover-author.hbs
+++ b/partials/author/cover-author.hbs
@@ -15,10 +15,10 @@
 			<span class="meta-item website"><a href="{{website}}" target="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
 		{{/if}}
 		{{#if twitter}}
-			<span class="meta-item twitter"><a href="{{twitter_url}}" target="_BLANK"><i class="fab fa-twitter"></i> {{twitter_url}}</a></span>
+			<span class="meta-item twitter"><a href="{{twitter_url}}" target="_BLANK"><i class="fab fa-twitter"></i>{{twitter}}</a></span>
 		{{/if}}
 		{{#if facebook}}
-			<span class="meta-item facebook"><a href="{{facebook_url}}" target="_BLANK"><i class="fa fa-facebook"></i> {{facebook_url}}</a></span>
+			<span class="meta-item facebook"><a href="{{facebook_url}}" target="_BLANK"><i class="fa fa-facebook"></i>{{facebook}}</a></span>
 		{{/if}}
 	</div>
 	{{#if bio}}
