--- a/partials/footer/footer-about.hbs
+++ b/partials/footer/footer-about.hbs
@@ -9,7 +9,7 @@
   <div class="social-btns">
     <a class="btn medium" href="https://hackingandslacking.com"><i class="fab fa-medium"></i></a>
     <a class="btn facebook" href="https://facebook.com/{{@site.facebook}}/"><i class="fab fa-facebook-f"></i></a>
-    <a class="btn twitter" href="https://twitter,com/{{@site.twitter}}/"><i class="fab fa-twitter"></i></a>
+    <a class="btn twitter" href="https://twitter.com/{{@site.twitter}}/"><i class="fab fa-twitter"></i></a>
     <a class="btn tumblr" href="https://hackersandslackers.tumblr.com/"><i class="fab fa-tumblr"></i></a>
     <a class="btn github" href="https://github.com/hackersandslackers/"><i class="fab fa-github"></i></a>
     <a class="btn rss" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
