--- a/src/less/global/layout.less
+++ b/src/less/global/layout.less
@@ -10,7 +10,7 @@
 	&.sidebar-layout {
 		display: grid;
 		grid-gap: 30px;
-		grid-template-columns: 1fr 3fr;
+		grid-template-columns: 316px 1fr;
 		@media(max-width: 950px) {
 			grid-gap: 20px;
 		}
@@ -21,10 +21,6 @@
 			grid-template-columns: 1fr;
 		}
 	}
-}
-
-.sidebar {
-	width: 316px !important;
 }
 
 section > .container {
