--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -304,7 +304,7 @@
 
   .apache {
     color:#d5212a;
-    background: #f7d8d9;
+    background: #ffe6e6;
 
     * {
       color:#d5212a !important;
@@ -312,7 +312,7 @@
   }
 
   .spark {
-    background: #ffe4d0;
+    background: #ffecde;
     color: #e77115;
 
     * {
