fixed link previews bug

--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -1,7 +1,7 @@
 @import "variables.less";
 @import "mixin.less";
 /*====================================================
-	header
+	header nav
 ====================================================*/
 nav {
 	margin-bottom: 30px;
