--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -166,7 +166,7 @@
   display: none;
   @media(max-width: @mobile-breakpoint) {
     display: block;
-    margin: 10px 0;
+    margin: 10px 0 15px;
     width: auto!important;
   }
 }
