added new series

--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -277,7 +277,7 @@
 		.seriesitem {
 			transition: all 0.2s ease-out;
 			border-bottom: 1px solid #d5dde8;
-			height: 60px;
+			height: 55px;
 			margin-bottom: 0;
 			padding: 0;
 			overflow: hidden;
@@ -342,6 +342,10 @@
 
 				&.graphql-hype {
 					background: @graphql-color;
+				}
+				
+				&.learning-apache-spark {
+					background: @learning-apache-spark;
 				}
 			}
 		}
@@ -420,9 +424,9 @@
 		}
 
 		.series-info {
-			margin-left: 10px;
+			margin-left: 15px;
 			@media(max-width: 950px) {
-				padding: 5px 0;
+				padding: 0;
 				background: 0;
 			}
 		}
