--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -48,6 +48,7 @@
 @sql-color: #435c9e;
 @mapbox-color: #4264fb;
 @graphql-color: #E10098;
+@learning-apache-spark: #e77115;
 
 // Shadows
 @shadow-color: 0 0 5px rgba(65, 67, 144, 0.15);
