--- a/partials/posts/afterpost.hbs
+++ b/partials/posts/afterpost.hbs
@@ -5,7 +5,7 @@
   {{#foreach authors include="count.posts"}}
     {{> author/author-card}}
   {{/foreach}}
-  {{> posts/relatedposts}}
+  {{> posts/widget-recentposts}}
   {{> widgets/widget-newsletter}}
 </section>
  <!-- End Postfooter -->
