--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -14,6 +14,8 @@
 @import './posts/previewplaceholder.less';
 @import './posts/nextprev.less';
 @import './posts/baguettebox.less';
+@import './posts/related-posts.less';
+@import './posts/newsletter-widget.less';
 
 /* Code */
 @import './posts/code.less';
