--- a/partials/widgets/widget-recentpost.hbs
+++ b/partials/widgets/widget-recentpost.hbs
@@ -2,7 +2,7 @@
 {{#get "posts" limit="4" filter="tags:-[hash-hidden,Roundup,roundup]"}}
 	<div class="widget recent">
 		<h4 class="title">Recent</h4>
-		<div class="recent-post">
+		<div class="recent-posts">
 			{{#foreach posts}}
 				<div class="recent-single-post">
 					<a href="{{url}}" class="post-title">{{title}}</a>
