--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -164,6 +164,7 @@
 
 .author-card-small {
   display: none;
+  overflow: hidden;
   @media(max-width: @mobile-breakpoint) {
     display: block;
     margin: 10px 0 15px;
